--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
 
     {% if img_data %}
         <p>
+            <h2>Время инференса модели: {{ time_model_inference }} ms</h2>
+        </p>
+        <p>
             <img src="data:image/jpeg;base64,{{ img_data }}"/>
         </p>
     {% endif %}
