Add draw red box

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <input type="file" name="img_file" autocomplete="off" required>
         </p>
         <p>
-            <input type="submit">
+            <input type="submit" value="Распознать">
         </p>
     </form>
 
